# pingpong

./: CMakeLists.txt  README.md  common.mk  makefile
src/: ball.c  collision.c  common.h  defs.h  draw.c  draw.h  frames.c  init.c  init.h  input.c  log.c  main.c  main.h  sound.c  sound.h  stage.c  structs.h  util.c
src/headers/: ball.h  collision.h  common.h  defs.h  draw.h  init.h  input.h  main.h  util.h
